examples/test/testpolicy2590.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2590
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key32: value9
      key44: value11
      key49: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value28
          key21: value3
      podSelector:
        matchLabels:
          key28: value32
          key36: value16
          key22: value41
